unpackaged/main/default/objects/Framework_Agreement__c/fields/GrilleMD__c.field-meta.xml
<CustomField>
    <fullName>GrilleMD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grille MD</label>
    <type>Checkbox</type>
</CustomField>