unpackaged/main/default/objects/Framework_Agreement__c/fields/Groupement__c.field-meta.xml
<CustomField>
    <fullName>Groupement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groupement</label>
    <referenceTo>Groupement__c</referenceTo>
    <relationshipLabel>Accords - Cadres</relationshipLabel>
    <relationshipName>Accords_Cadres</relationshipName>
    <type>Lookup</type>
</CustomField>