unpackaged/main/default/objects/Framework_Agreement__c/fields/Indexation__c.field-meta.xml
<CustomField>
    <fullName>Indexation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation</label>
    <type>Checkbox</type>
</CustomField>