unpackaged/main/default/objects/Framework_Agreement__c/fields/Indexation_franchises__c.field-meta.xml
<CustomField>
    <fullName>Indexation_franchises__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation des franchises</label>
    <type>Checkbox</type>
</CustomField>