unpackaged/main/default/objects/Framework_Agreement__c/fields/Indexation_loyers_KM__c.field-meta.xml
<CustomField>
    <fullName>Indexation_loyers_KM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indexation des loyers et kilomètres</label>
    <type>Checkbox</type>
</CustomField>