unpackaged/main/default/objects/Framework_Agreement__c/fields/IndexationContainerCD__c.field-meta.xml
<CustomField>
    <fullName>IndexationContainerCD__c</fullName>
    <label>Indexation Container CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indexation</valueSetName>
    </valueSet>
</CustomField>