unpackaged/main/default/objects/Framework_Agreement__c/fields/IndexationContainerMD__c.field-meta.xml
<CustomField>
    <fullName>IndexationContainerMD__c</fullName>
    <label>Indexation Container MD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indexation</valueSetName>
    </valueSet>
</CustomField>