unpackaged/main/default/objects/Framework_Agreement__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <label>Marque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand</valueSetName>
    </valueSet>
</CustomField>