unpackaged/main/default/objects/Framework_Agreement__c/fields/Mise_en_portefeuille_Semi_avec_tiers__c.field-meta.xml
<CustomField>
    <fullName>Mise_en_portefeuille_Semi_avec_tiers__c</fullName>
    <label>Mise en portefeuille - Semi avec tiers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>