unpackaged/main/default/objects/Framework_Agreement__c/fields/MisePortefeuille__c.field-meta.xml
<CustomField>
    <fullName>MisePortefeuille__c</fullName>
    <label>Franchise mise en portefeuille</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>