unpackaged/main/default/objects/Framework_Agreement__c/fields/ModeFacturationCD__c.field-meta.xml
<CustomField>
    <fullName>ModeFacturationCD__c</fullName>
    <defaultValue>&quot;Fin de mois&quot;</defaultValue>
    <label>Mode de facturation CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_facturation</valueSetName>
    </valueSet>
</CustomField>