unpackaged/main/default/objects/Framework_Agreement__c/fields/ModeFacturationLD__c.field-meta.xml
<CustomField>
    <fullName>ModeFacturationLD__c</fullName>
    <defaultValue>&quot;Début de mois&quot;</defaultValue>
    <label>Mode de facturation LD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_facturation</valueSetName>
    </valueSet>
</CustomField>