unpackaged/main/default/objects/Framework_Agreement__c/fields/ModeFacturationMD__c.field-meta.xml
<CustomField>
    <fullName>ModeFacturationMD__c</fullName>
    <defaultValue>&quot;Fin de mois&quot;</defaultValue>
    <label>Mode de facturation MD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_facturation</valueSetName>
    </valueSet>
</CustomField>