unpackaged/main/default/objects/Framework_Agreement__c/fields/ModePaiement__c.field-meta.xml
<CustomField>
    <fullName>ModePaiement__c</fullName>
    <label>Mode de paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virement</fullName>
                <label>Virement SEPA</label>
            </value>
            <value>
                <fullName>Carte bancaire</fullName>
            </value>
            <value>
                <fullName>Espèces</fullName>
            </value>
            <value>
                <fullName>Prélèvement</fullName>
                <label>Prélèvement SEPA CORE</label>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Prélèvement SEPA B2B</fullName>
            </value>
            <value>
                <fullName>Virement bancaire étrang</fullName>
            </value>
            <value>
                <fullName>Prelevement SEPA B2B</fullName>
                <isActive>false</isActive>
                <label>Prelevement SEPA B2B</label>
            </value>
            <value>
                <fullName>Virement bancaire</fullName>
                <isActive>false</isActive>
                <label>Virement bancaire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>