unpackaged/main/default/objects/Framework_Agreement__c/fields/ModeReglementCD__c.field-meta.xml
<CustomField>
    <fullName>ModeReglementCD__c</fullName>
    <defaultValue>&quot;Virement&quot;</defaultValue>
    <label>Mode de règlement CD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_reglement</valueSetName>
    </valueSet>
</CustomField>