unpackaged/main/default/objects/Framework_Agreement__c/fields/ModeReglementLD__c.field-meta.xml
<CustomField>
    <fullName>ModeReglementLD__c</fullName>
    <defaultValue>&quot;Prélèvement automatique&quot;</defaultValue>
    <label>Mode de règlement LD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_reglement</valueSetName>
    </valueSet>
</CustomField>