unpackaged/main/default/objects/Framework_Agreement__c/fields/ModeReglementMD__c.field-meta.xml
<CustomField>
    <fullName>ModeReglementMD__c</fullName>
    <defaultValue>&quot;Prélèvement automatique&quot;</defaultValue>
    <label>Mode de règlement MD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_reglement</valueSetName>
    </valueSet>
</CustomField>