unpackaged/main/default/objects/Framework_Agreement__c/fields/Nom_indice_indexation_Loyers_KM__c.field-meta.xml
<CustomField>
    <fullName>Nom_indice_indexation_Loyers_KM__c</fullName>
    <label>Nom indice d&#39;indexation des loyers et KM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CNL</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>