unpackaged/main/default/objects/Framework_Agreement__c/fields/NombreMinimalMoisAvantSortie__c.field-meta.xml
<CustomField>
    <fullName>NombreMinimalMoisAvantSortie__c</fullName>
    <label>Nombre minimal de mois avant sortie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>