unpackaged/main/default/objects/Framework_Agreement__c/fields/NombreMoisNeutralisation__c.field-meta.xml
<CustomField>
    <fullName>NombreMoisNeutralisation__c</fullName>
    <label>Nombre de mois de neutralisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>