unpackaged/main/default/objects/Framework_Agreement__c/fields/NomIndice__c.field-meta.xml
<CustomField>
    <fullName>NomIndice__c</fullName>
    <label>Nom de l&#39;indice d&#39;indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indice CNL</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>CNLB</fullName>
            </value>
            <value>
                <fullName>IPCN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>