unpackaged/main/default/objects/Framework_Agreement__c/fields/Organisation_Commerciale__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Commerciale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation Commerciale</label>
    <referenceTo>SalesArea__c</referenceTo>
    <relationshipLabel>Accords - Cadres</relationshipLabel>
    <relationshipName>Accords_Cadres</relationshipName>
    <type>Lookup</type>
</CustomField>