unpackaged/main/default/objects/Framework_Agreement__c/fields/PaiementAvance__c.field-meta.xml
<CustomField>
    <fullName>PaiementAvance__c</fullName>
    <label>Paiement Avance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
                <default>true</default>
                <label>100%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>