unpackaged/main/default/objects/Framework_Agreement__c/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BillingCountry</valueSetName>
    </valueSet>
</CustomField>