unpackaged/main/default/objects/Framework_Agreement__c/fields/Penalites_de_resiliation_anticipee_LD__c.field-meta.xml
<CustomField>
    <fullName>Penalites_de_resiliation_anticipee_LD__c</fullName>
    <label>Pénalités de résiliation anticipée - LD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>