unpackaged/main/default/objects/Framework_Agreement__c/fields/PenalitesAuDelaDelaiLivraison__c.field-meta.xml
<CustomField>
    <fullName>PenalitesAuDelaDelaiLivraison__c</fullName>
    <label>Pénalités au-delà du délai de livraison</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>