unpackaged/main/default/objects/Framework_Agreement__c/fields/PeriodeNeutralisation__c.field-meta.xml
<CustomField>
    <fullName>PeriodeNeutralisation__c</fullName>
    <label>Période de neutralisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>