unpackaged/main/default/objects/Framework_Agreement__c/fields/PeriodiciteRegulationKilometrique__c.field-meta.xml
<CustomField>
    <fullName>PeriodiciteRegulationKilometrique__c</fullName>
    <label>Périodicité Régulation kilométrique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
            </value>
            <value>
                <fullName>Annuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>