unpackaged/main/default/objects/Framework_Agreement__c/fields/Perte_Totale__c.field-meta.xml
<CustomField>
    <fullName>Perte_Totale__c</fullName>
    <label>Perte Totale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>