unpackaged/main/default/objects/Framework_Agreement__c/fields/Plafond_indexation_loyers_KM__c.field-meta.xml
<CustomField>
    <fullName>Plafond_indexation_loyers_KM__c</fullName>
    <label>Plafond d&#39;indexation des loyers et KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>