unpackaged/main/default/objects/Framework_Agreement__c/fields/PortailMisDispositionClient__c.field-meta.xml
<CustomField>
    <fullName>PortailMisDispositionClient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portail mis à disposition du client</label>
    <type>Checkbox</type>
</CustomField>