unpackaged/main/default/objects/Framework_Agreement__c/fields/Porte_sortie_applicabilite__c.field-meta.xml
<CustomField>
    <fullName>Porte_sortie_applicabilite__c</fullName>
    <label>Porte sortie - applicabilité</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>