unpackaged/main/default/objects/Framework_Agreement__c/fields/Porte_sortie_duree_preavis__c.field-meta.xml
<CustomField>
    <fullName>Porte_sortie_duree_preavis__c</fullName>
    <label>Porte de sortie - durée du préavis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>