unpackaged/main/default/objects/Framework_Agreement__c/fields/Porte_sortie_indemnite_resiliation__c.field-meta.xml
<CustomField>
    <fullName>Porte_sortie_indemnite_resiliation__c</fullName>
    <label>Porte sortie - indemnité résiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nombre de mois de loyer</fullName>
            </value>
            <value>
                <fullName>Dépôt de garantie non restitué</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>