unpackaged/main/default/objects/Framework_Agreement__c/fields/PorteSortie__c.field-meta.xml
<CustomField>
    <fullName>PorteSortie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Porte de sortie ?</label>
    <type>Checkbox</type>
</CustomField>