unpackaged/main/default/objects/Framework_Agreement__c/fields/PreavisLDVehicule__c.field-meta.xml
<CustomField>
    <fullName>PreavisLDVehicule__c</fullName>
    <label>Préavis - LD Véhicule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>