unpackaged/main/default/objects/Framework_Agreement__c/fields/PreavisPorteSortie__c.field-meta.xml
<CustomField>
    <fullName>PreavisPorteSortie__c</fullName>
    <label>Préavis - Porte de sortie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>