unpackaged/main/default/objects/Framework_Agreement__c/fields/PresenceGrille__c.field-meta.xml
<CustomField>
    <fullName>PresenceGrille__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Présence de grille ?</label>
    <type>Checkbox</type>
</CustomField>