unpackaged/main/default/objects/Framework_Agreement__c/fields/ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceNumber__c</fullName>
    <label>ID du contrat de référence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>