unpackaged/main/default/objects/Framework_Agreement__c/fields/Regle_date_indexation_Franchises__c.field-meta.xml
<CustomField>
    <fullName>Regle_date_indexation_Franchises__c</fullName>
    <label>Règle sur la date indexation franchises</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a chaque date anniversaire de mise a disposition du vehicule</fullName>
                <label>à chaque date anniversaire de mise à disposition du véhicule</label>
            </value>
            <value>
                <fullName>01 Janvier</fullName>
            </value>
            <value>
                <fullName>01 Juillet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>