unpackaged/main/default/objects/Framework_Agreement__c/fields/Regle_date_indexation_Loyer_KM__c.field-meta.xml
<CustomField>
    <fullName>Regle_date_indexation_Loyer_KM__c</fullName>
    <label>Règle de date d&#39;indexation Loyer/KM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>à chaque date anniversaire de mise à disposition du véhicule</fullName>
            </value>
            <value>
                <fullName>à date fixe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>