unpackaged/main/default/objects/Framework_Agreement__c/fields/Remboursement__c.field-meta.xml
<CustomField>
    <fullName>Remboursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remboursement</label>
    <type>Checkbox</type>
</CustomField>