unpackaged/main/default/objects/Framework_Agreement__c/fields/RemiseALD__c.field-meta.xml
<CustomField>
    <fullName>RemiseALD__c</fullName>
    <label>Remise sur ALD en %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>