unpackaged/main/default/objects/Framework_Agreement__c/fields/RemisePiedFacture__c.field-meta.xml
<CustomField>
    <fullName>RemisePiedFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remise pied de facture ?</label>
    <type>Checkbox</type>
</CustomField>