unpackaged/main/default/objects/Framework_Agreement__c/fields/Smart_Cable_Electrique_PL__c.field-meta.xml
<CustomField>
    <fullName>Smart_Cable_Electrique_PL__c</fullName>
    <label>Smart Cable - Electrique PL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>