unpackaged/main/default/objects/Framework_Agreement__c/fields/SynthesePrestation__c.field-meta.xml
<CustomField>
    <fullName>SynthesePrestation__c</fullName>
    <label>Synthèse prestation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trimestrielle</fullName>
            </value>
            <value>
                <fullName>Semestrielle</fullName>
            </value>
            <value>
                <fullName>Annuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>