unpackaged/main/default/objects/Framework_Agreement__c/fields/TauxRemisePiedFactureCD__c.field-meta.xml
<CustomField>
    <fullName>TauxRemisePiedFactureCD__c</fullName>
    <inlineHelpText>Taux de remise pied de facture CD à appliquer</inlineHelpText>
    <label>Taux de remise pied de facture CD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>