unpackaged/main/default/objects/Framework_Agreement__c/fields/TauxRemisePiedFactureLD__c.field-meta.xml
<CustomField>
    <fullName>TauxRemisePiedFactureLD__c</fullName>
    <inlineHelpText>Taux de remise pied de facture LD à appliquer</inlineHelpText>
    <label>Taux de remise pied de facture LD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>