unpackaged/main/default/objects/Framework_Agreement__c/fields/Type_de_permis_PL__c.field-meta.xml
<CustomField>
    <fullName>Type_de_permis_PL__c</fullName>
    <label>Type de permis - PL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>