unpackaged/main/default/objects/Framework_Agreement__c/fields/TypeContratReference__c.field-meta.xml
<CustomField>
    <fullName>TypeContratReference__c</fullName>
    <formula>IF( LEFT(RecordType.DeveloperName, 2) = &#39;AC&#39;, &#39;Accord-cadre&#39;, &#39;CGL&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de contrat de référence</label>
    <type>Text</type>
</CustomField>