unpackaged/main/default/objects/Framework_Agreement__c/fields/TypedeContrat_Duree__c.field-meta.xml
<CustomField>
    <fullName>TypedeContrat_Duree__c</fullName>
    <label>Type de Contrat</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
                <label>MD</label>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>