unpackaged/main/default/objects/Framework_Agreement__c/fields/TypePenalitesPorteSortie__c.field-meta.xml
<CustomField>
    <fullName>TypePenalitesPorteSortie__c</fullName>
    <label>Type de pénalités - Porte de sortie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nombre de mois de loyer</fullName>
            </value>
            <value>
                <fullName>Dépôt de garantie non restitué</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>