unpackaged/main/default/objects/Framework_Agreement__c/fields/TypePermis__c.field-meta.xml
<CustomField>
    <fullName>TypePermis__c</fullName>
    <label>Type de permis</label>
    <length>155</length>
    <type>Text</type>
</CustomField>