unpackaged/main/default/objects/Framework_Agreement__c/fields/Validite_DatedeDebut__c.field-meta.xml
<CustomField>
    <fullName>Validite_DatedeDebut__c</fullName>
    <label>Date de début de validité des CGL</label>
    <type>Date</type>
</CustomField>