unpackaged/main/default/objects/Framework_Agreement__c/fields/Validite_DatedeFin__c.field-meta.xml
<CustomField>
    <fullName>Validite_DatedeFin__c</fullName>
    <label>Date de fin de validité des CGL</label>
    <type>Date</type>
</CustomField>