unpackaged/main/default/objects/Framework_Agreement__c/fields/Vol_et_incendie_Semi_remorque__c.field-meta.xml
<CustomField>
    <fullName>Vol_et_incendie_Semi_remorque__c</fullName>
    <label>Vol et incendie - Semi-remorque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>