unpackaged/main/default/objects/Framework_Agreement__c/fields/Vue_Commerciale_Client__c.field-meta.xml
<CustomField>
    <fullName>Vue_Commerciale_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Accords - Cadres</relationshipLabel>
    <relationshipName>Accords_Cadres</relationshipName>
    <type>Lookup</type>
</CustomField>