unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AC_CD_MD.recordType-meta.xml
<RecordType>
    <fullName>AC_CD_MD</fullName>
    <active>true</active>
    <label>Accord - Cadre - CD/MD</label>
</RecordType>