unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AC_LD.recordType-meta.xml
<RecordType>
    <fullName>AC_LD</fullName>
    <active>true</active>
    <label>Accord - Cadre - LD</label>
</RecordType>