unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AccordCadre_Container.recordType-meta.xml
<RecordType>
    <fullName>AccordCadre_Container</fullName>
    <active>true</active>
    <label>Accord - Cadre - Container</label>
</RecordType>