unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AccordCadre_PL.recordType-meta.xml
<RecordType>
    <fullName>AccordCadre_PL</fullName>
    <active>false</active>
    <label>Accord - Cadre - Poids Lourd</label>
</RecordType>