unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AccordCadre_Remorque.recordType-meta.xml
<RecordType>
    <fullName>AccordCadre_Remorque</fullName>
    <active>false</active>
    <label>Accord - Cadre - Remorque</label>
</RecordType>