unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AccordCadre_SR.recordType-meta.xml
<RecordType>
    <fullName>AccordCadre_SR</fullName>
    <active>false</active>
    <label>Accord - Cadre - Semi-remorque</label>
</RecordType>