unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AccordCadre_VE.recordType-meta.xml
<RecordType>
    <fullName>AccordCadre_VE</fullName>
    <active>false</active>
    <label>Accord - Cadre - Véhicule Electrique</label>
</RecordType>