unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/AccordCadre_VL.recordType-meta.xml
<RecordType>
    <fullName>AccordCadre_VL</fullName>
    <active>false</active>
    <label>Accord - Cadre - Véhicule Léger</label>
</RecordType>