unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/Accords_CadresMeubles.recordType-meta.xml
<RecordType>
    <fullName>Accords_CadresMeubles</fullName>
    <active>true</active>
    <label>Accords - Cadres Meubles</label>
</RecordType>