unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGL_CD_MD.recordType-meta.xml
<RecordType>
    <fullName>CGL_CD_MD</fullName>
    <active>true</active>
    <label>Conditions Générales de Location - CD/MD</label>
</RecordType>