unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGL_LD.recordType-meta.xml
<RecordType>
    <fullName>CGL_LD</fullName>
    <active>true</active>
    <label>Conditions Générales de Location - LD</label>
</RecordType>