unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGLContainer.recordType-meta.xml
<RecordType>
    <fullName>CGLContainer</fullName>
    <active>true</active>
    <label>Conditions Générales de Location - Container</label>
</RecordType>