unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGLPL.recordType-meta.xml
<RecordType>
    <fullName>CGLPL</fullName>
    <active>false</active>
    <label>Conditions Générales de Location - Poids Lourd</label>
</RecordType>