unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGLR.recordType-meta.xml
<RecordType>
    <fullName>CGLR</fullName>
    <active>false</active>
    <label>Conditions Générales de Location - Remorque</label>
</RecordType>