unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGLSR.recordType-meta.xml
<RecordType>
    <fullName>CGLSR</fullName>
    <active>false</active>
    <label>Conditions Générales de Location - Semi-remorque</label>
</RecordType>