unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGLVE.recordType-meta.xml
<RecordType>
    <fullName>CGLVE</fullName>
    <active>false</active>
    <label>Conditions Générales de Location - Véhicule Electrique</label>
</RecordType>