unpackaged/main/default/objects/Framework_Agreement__c/recordTypes/CGLVL.recordType-meta.xml
<RecordType>
    <fullName>CGLVL</fullName>
    <active>false</active>
    <label>Conditions Générales de Location - Véhicule Léger</label>
</RecordType>