unpackaged/main/default/objects/Framework_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Groupement__c</columns>
    <columns>Vue_Commerciale_Client__c</columns>
    <columns>Organisation_Commerciale__c</columns>
    <columns>Business_Line__c</columns>
    <columns>DureeduContrat__c</columns>
    <columns>Marque__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TypedeContrat_Duree__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>