unpackaged/main/default/objects/Framework_Agreement__c/listViews/CGL.listView-meta.xml
<ListView>
    <fullName>CGL</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Business_Line2__c</columns>
    <columns>Country__c</columns>
    <columns>Organisation_Commerciale__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Validite_DatedeDebut__c</columns>
    <columns>Validite_DatedeFin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Framework_Agreement__c.AC_CD_MD,Framework_Agreement__c.AccordCadre_Container,Framework_Agreement__c.AC_LD,Framework_Agreement__c.CGL_CD_MD,Framework_Agreement__c.CGLContainer,Framework_Agreement__c.CGL_LD</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Organisation_Commerciale__c</field>
        <operation>notContain</operation>
        <value>FRANCE</value>
    </filters>
    <label>CGL</label>
</ListView>